--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "firebase": "^9.5.0",
+    "js-file-download": "^0.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.4",
     "react-icons": "^4.3.1",
+    "react-parallax-tilt": "^1.5.79",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-text-transition": "^1.3.0",
     "styled-components": "^5.3.3",
+    "swiper": "^6.8.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
