--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.1",
     "@mui/styled-engine-sc": "^5.1.0",
+    "@react-spring/parallax": "^9.3.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -21,6 +22,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.3.2",
     "react-text-transition": "^1.3.0",
     "styled-components": "^5.3.3",
     "swiper": "^6.8.4",
