--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.24.0",
     "firebase": "^9.5.0",
     "js-file-download": "^0.4.12",
