--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^12.1.10",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.24.0",
+    "emailjs": "^3.7.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^9.5.0",
     "js-file-download": "^0.4.12",
     "react": "^17.0.2",
