--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@testing-library/user-event": "^12.1.10",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.24.0",
+    "d3-ease": "^3.0.1",
     "emailjs": "^3.7.0",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.5.0",
     "js-file-download": "^0.4.12",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.4",
     "react-icons": "^4.3.1",
+    "react-move": "^6.5.0",
     "react-parallax-tilt": "^1.5.79",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.0.2",
